cleanup, tags, .. (#19)